--- a/SCSS/Run Forest Run/app/css/style.css
+++ b/SCSS/Run Forest Run/app/css/style.css
@@ -512,158 +512,32 @@ body {
  ====================*/
 @media only screen and (min-width: 1224px) {
   /* line 315, ../scss/partials/_media-queries.scss */
-  header {
-    background: #000000;
-  }
-  /* line 317, ../scss/partials/_media-queries.scss */
-  header nav {
-    height: 75px;
-  }
-  /* line 319, ../scss/partials/_media-queries.scss */
-  header nav a {
-    height: 5px;
+  .main__block {
+    height: 536px;
   }
 
-  /* line 328, ../scss/partials/_media-queries.scss */
-  .main__block {
-    margin-top: -36%;
-    width: 1280px;
-    height: 500px;
-    left: 0px;
-    top: 77px;
-    background-image: url("../img/banner.png");
-    background-size: 100%;
-    background-repeat: no-repeat;
+  /* line 319, ../scss/partials/_media-queries.scss */
+  .search__block {
+    position: absolute;
+    top: 302px;
+    width: 574px;
   }
-  /* line 338, ../scss/partials/_media-queries.scss */
-  .main__block h1 {
-    top: 60px;
-    position: sticky;
-    margin-top: 33%;
-    margin-left: 10%;
-    width: 50%;
-    font-family: Arial;
-    font-size: 150%;
+  /* line 324, ../scss/partials/_media-queries.scss */
+  .search__block h1 {
+    font-size: 36px;
     line-height: normal;
+    width: 108%;
     color: white;
   }
 
-  /* line 352, ../scss/partials/_media-queries.scss */
-  .search__block {
-    position: absolute;
-    top: 150%;
-    margin-left: 10%;
-    width: 50%;
-  }
-  /* line 357, ../scss/partials/_media-queries.scss */
-  .search__block .search {
-    text-indent: 15px;
-    background: #FFFFFF;
-    border: 1px solid #8E8E8E;
-    box-sizing: border-box;
-    border-radius: 20px;
-    width: 80%;
-    height: 5%;
-    left: 10%;
-    top: 65%;
-    font-family: Arial;
-    font-size: 18px;
-    line-height: normal;
-    color: #8E8E8E;
-  }
-  /* line 373, ../scss/partials/_media-queries.scss */
-  .search__block .image {
-    position: absolute;
-    width: 23px;
-    height: 23px;
-    right: 50px;
-    top: 2%;
-    margin-right: 15%;
-  }
-
-  /* line 383, ../scss/partials/_media-queries.scss */
+  /* line 333, ../scss/partials/_media-queries.scss */
   .agent__block {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    margin-top: 2%;
-  }
-  /* line 387, ../scss/partials/_media-queries.scss */
-  .agent__block .single__agent {
-    background: #FFFFFF;
-    margin-top: 9%;
-  }
-  /* line 390, ../scss/partials/_media-queries.scss */
-  .agent__block .single__agent .agent {
-    /*font*/
-    margin-left: 5%;
-    font-family: Arial;
-    font-size: 18px;
-    line-height: normal;
-    /* borde-light */
-    border-bottom: 1px solid #D8D8D8;
-  }
-  /* line 400, ../scss/partials/_media-queries.scss */
-  .agent__block .single__agent .agent .certified {
-    margin-left: 40%;
-    left: 60%;
-    right: 14.03%;
-    top: 4.96%;
-    bottom: 42.12%;
-    border-bottom-color: #000000;
-  }
-  /* line 411, ../scss/partials/_media-queries.scss */
-  .agent__block .single__agent p {
-    margin-left: 10%;
-    width: 80%;
-    height: 50%;
-    left: 164px;
-    top: 583px;
-    font-family: Arial;
-    font-size: 95%;
-    line-height: normal;
-    text-align: justify;
-    color: #000000;
-  }
-  /* line 412, ../scss/partials/_media-queries.scss */
-  .agent__block .single__agent p .image {
-    float: left;
-    width: 126px;
-    height: 167px;
-  }
-  /* line 432, ../scss/partials/_media-queries.scss */
-  .agent__block .single__agent .footer__agent {
-    display: flex;
-    margin-top: 5%;
-  }
-  /* line 435, ../scss/partials/_media-queries.scss */
-  .agent__block .single__agent .footer__agent .btn {
-    margin-left: 10%;
-    margin-right: 15%;
-    background: #000000;
-    border-radius: 18px;
-    width: 30%;
-    left: 150%;
-    top: 300%;
-    font-family: Arial;
-    font-size: 100%;
-    line-height: normal;
-    text-align: center;
-    color: #FFFFFF;
-  }
-  /* line 450, ../scss/partials/_media-queries.scss */
-  .agent__block .single__agent .footer__agent h2 {
-    margin-left: 10%;
-    margin-top: 5%;
-    height: 17px;
-    left: 23px;
-    top: 720px;
-    font-family: Arial;
-    font-size: 70%;
-    line-height: normal;
-    color: #000000;
+    margin-top: 1%;
   }
 
-  /* line 468, ../scss/partials/_media-queries.scss */
+  /* line 339, ../scss/partials/_media-queries.scss */
   .footer__block {
     margin-top: 10%;
     width: 100%;
@@ -673,7 +547,7 @@ body {
     background: #000000;
     display: flex;
   }
-  /* line 478, ../scss/partials/_media-queries.scss */
+  /* line 349, ../scss/partials/_media-queries.scss */
   .footer__block p {
     margin-left: 10%;
     margin-top: 5%;
@@ -684,7 +558,7 @@ body {
     line-height: normal;
     color: #FFFFFF;
   }
-  /* line 491, ../scss/partials/_media-queries.scss */
+  /* line 362, ../scss/partials/_media-queries.scss */
   .footer__block h5 {
     margin-left: 10%;
     margin-top: 5%;
@@ -698,7 +572,7 @@ body {
 /* ====================
     INTERMEDIATE: Menu
    ==================== */
-/* line 514, ../scss/partials/_media-queries.scss */
+/* line 385, ../scss/partials/_media-queries.scss */
 nav a {
   float: left;
   width: 27%;
@@ -706,11 +580,11 @@ nav a {
   padding: 25px 2%;
   margin-bottom: 0;
 }
-/* line 522, ../scss/partials/_media-queries.scss */
+/* line 393, ../scss/partials/_media-queries.scss */
 nav li:first-child a {
   margin-left: 0;
 }
-/* line 526, ../scss/partials/_media-queries.scss */
+/* line 397, ../scss/partials/_media-queries.scss */
 nav li:last-child a {
   margin-right: 0;
 }
@@ -718,12 +592,12 @@ nav li:last-child a {
 /* ========================
     INTERMEDIATE: IE Fixes
    ======================== */
-/* line 535, ../scss/partials/_media-queries.scss */
+/* line 406, ../scss/partials/_media-queries.scss */
 nav ul li {
   display: inline;
 }
 
-/* line 539, ../scss/partials/_media-queries.scss */
+/* line 410, ../scss/partials/_media-queries.scss */
 .oldie nav a {
   margin: 0 0.7%;
 }
@@ -732,7 +606,7 @@ nav ul li {
   /* ====================
       WIDE: CSS3 Effects
      ==================== */
-  /* line 550, ../scss/partials/_media-queries.scss */
+  /* line 421, ../scss/partials/_media-queries.scss */
   .header-container,
   .main aside {
     -webkit-box-shadow: 0 5px 10px #aaa;
@@ -743,12 +617,12 @@ nav ul li {
   /* ============
       WIDE: Menu
      ============ */
-  /* line 561, ../scss/partials/_media-queries.scss */
+  /* line 432, ../scss/partials/_media-queries.scss */
   .title {
     float: left;
   }
 
-  /* line 565, ../scss/partials/_media-queries.scss */
+  /* line 436, ../scss/partials/_media-queries.scss */
   nav {
     float: right;
     width: 38%;
@@ -757,12 +631,12 @@ nav ul li {
   /* ============
       WIDE: Main
      ============ */
-  /* line 575, ../scss/partials/_media-queries.scss */
+  /* line 446, ../scss/partials/_media-queries.scss */
   .main article {
     float: left;
     width: 57%;
   }
-  /* line 580, ../scss/partials/_media-queries.scss */
+  /* line 451, ../scss/partials/_media-queries.scss */
   .main aside {
     float: right;
     width: 28%;
@@ -772,7 +646,7 @@ nav ul li {
   /* ===============
       Maximal Width
      =============== */
-  /* line 593, ../scss/partials/_media-queries.scss */
+  /* line 464, ../scss/partials/_media-queries.scss */
   .wrapper {
     width: 1026px;
     /* 1140px - 10% for margins */
@@ -783,7 +657,7 @@ nav ul li {
    Print styles
    ========================================================================== */
 @media print {
-  /* line 604, ../scss/partials/_media-queries.scss */
+  /* line 475, ../scss/partials/_media-queries.scss */
   * {
     background: transparent !important;
     color: #000 !important;
@@ -792,18 +666,18 @@ nav ul li {
     text-shadow: none !important;
   }
 
-  /* line 611, ../scss/partials/_media-queries.scss */
+  /* line 482, ../scss/partials/_media-queries.scss */
   a,
   a:visited {
     text-decoration: underline;
   }
 
-  /* line 616, ../scss/partials/_media-queries.scss */
+  /* line 487, ../scss/partials/_media-queries.scss */
   a[href]:after {
     content: " (" attr(href) ")";
   }
 
-  /* line 620, ../scss/partials/_media-queries.scss */
+  /* line 491, ../scss/partials/_media-queries.scss */
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
@@ -811,33 +685,33 @@ nav ul li {
   /*
    * Don't show links for images, or javascript/internal links
    */
-  /* line 628, ../scss/partials/_media-queries.scss */
+  /* line 499, ../scss/partials/_media-queries.scss */
   .ir a:after,
   a[href^="javascript:"]:after,
   a[href^="#"]:after {
     content: "";
   }
 
-  /* line 634, ../scss/partials/_media-queries.scss */
+  /* line 505, ../scss/partials/_media-queries.scss */
   pre,
   blockquote {
     border: 1px solid #999;
     page-break-inside: avoid;
   }
 
-  /* line 640, ../scss/partials/_media-queries.scss */
+  /* line 511, ../scss/partials/_media-queries.scss */
   thead {
     display: table-header-group;
     /* h5bp.com/t */
   }
 
-  /* line 644, ../scss/partials/_media-queries.scss */
+  /* line 515, ../scss/partials/_media-queries.scss */
   tr,
   img {
     page-break-inside: avoid;
   }
 
-  /* line 649, ../scss/partials/_media-queries.scss */
+  /* line 520, ../scss/partials/_media-queries.scss */
   img {
     max-width: 100% !important;
   }
@@ -845,7 +719,7 @@ nav ul li {
   @page {
     margin: 0.5cm;
   }
-  /* line 657, ../scss/partials/_media-queries.scss */
+  /* line 528, ../scss/partials/_media-queries.scss */
   p,
   h2,
   h3 {
@@ -853,7 +727,7 @@ nav ul li {
     widows: 3;
   }
 
-  /* line 664, ../scss/partials/_media-queries.scss */
+  /* line 535, ../scss/partials/_media-queries.scss */
   h2,
   h3 {
     page-break-after: avoid;
