--- a/SCSS/Run Forest Run/app/css/style.css
+++ b/SCSS/Run Forest Run/app/css/style.css
@@ -474,8 +474,12 @@ body {
     grid-template-columns: 1fr 1fr;
     margin-top: 1%;
   }
+  /* line 273, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent {
+    margin-right: 10%;
+  }
 
-  /* line 274, ../scss/partials/_media-queries.scss */
+  /* line 278, ../scss/partials/_media-queries.scss */
   .footer__block {
     margin-top: 10%;
     width: 100%;
@@ -485,7 +489,7 @@ body {
     background: #000000;
     display: flex;
   }
-  /* line 284, ../scss/partials/_media-queries.scss */
+  /* line 288, ../scss/partials/_media-queries.scss */
   .footer__block p {
     margin-left: 10%;
     margin-top: 5%;
@@ -496,7 +500,7 @@ body {
     line-height: normal;
     color: #FFFFFF;
   }
-  /* line 297, ../scss/partials/_media-queries.scss */
+  /* line 301, ../scss/partials/_media-queries.scss */
   .footer__block h5 {
     margin-left: 10%;
     margin-top: 5%;
@@ -511,18 +515,18 @@ body {
  Desktop
  ====================*/
 @media only screen and (min-width: 1224px) {
-  /* line 315, ../scss/partials/_media-queries.scss */
+  /* line 319, ../scss/partials/_media-queries.scss */
   .main__block {
     height: 536px;
   }
 
-  /* line 319, ../scss/partials/_media-queries.scss */
+  /* line 323, ../scss/partials/_media-queries.scss */
   .search__block {
     position: absolute;
     top: 302px;
     width: 574px;
   }
-  /* line 324, ../scss/partials/_media-queries.scss */
+  /* line 328, ../scss/partials/_media-queries.scss */
   .search__block h1 {
     font-size: 36px;
     line-height: normal;
@@ -530,14 +534,14 @@ body {
     color: white;
   }
 
-  /* line 333, ../scss/partials/_media-queries.scss */
+  /* line 337, ../scss/partials/_media-queries.scss */
   .agent__block {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin-top: 1%;
   }
 
-  /* line 339, ../scss/partials/_media-queries.scss */
+  /* line 344, ../scss/partials/_media-queries.scss */
   .footer__block {
     margin-top: 10%;
     width: 100%;
@@ -547,10 +551,10 @@ body {
     background: #000000;
     display: flex;
   }
-  /* line 349, ../scss/partials/_media-queries.scss */
+  /* line 354, ../scss/partials/_media-queries.scss */
   .footer__block p {
-    margin-left: 10%;
-    margin-top: 5%;
+    margin-left: 5%;
+    margin-top: 3%;
     width: 50%;
     top: 5%;
     font-family: Arial;
@@ -558,12 +562,12 @@ body {
     line-height: normal;
     color: #FFFFFF;
   }
-  /* line 362, ../scss/partials/_media-queries.scss */
+  /* line 367, ../scss/partials/_media-queries.scss */
   .footer__block h5 {
-    margin-left: 10%;
-    margin-top: 5%;
+    margin-left: 30%;
+    margin-top: 3%;
     font-family: Arial;
-    font-size: 70% x;
+    font-size: 70%;
     line-height: normal;
     text-decoration-line: underline;
     color: #FFFFFF;
@@ -572,7 +576,7 @@ body {
 /* ====================
     INTERMEDIATE: Menu
    ==================== */
-/* line 385, ../scss/partials/_media-queries.scss */
+/* line 390, ../scss/partials/_media-queries.scss */
 nav a {
   float: left;
   width: 27%;
@@ -580,11 +584,11 @@ nav a {
   padding: 25px 2%;
   margin-bottom: 0;
 }
-/* line 393, ../scss/partials/_media-queries.scss */
+/* line 398, ../scss/partials/_media-queries.scss */
 nav li:first-child a {
   margin-left: 0;
 }
-/* line 397, ../scss/partials/_media-queries.scss */
+/* line 402, ../scss/partials/_media-queries.scss */
 nav li:last-child a {
   margin-right: 0;
 }
@@ -592,12 +596,12 @@ nav li:last-child a {
 /* ========================
     INTERMEDIATE: IE Fixes
    ======================== */
-/* line 406, ../scss/partials/_media-queries.scss */
+/* line 411, ../scss/partials/_media-queries.scss */
 nav ul li {
   display: inline;
 }
 
-/* line 410, ../scss/partials/_media-queries.scss */
+/* line 415, ../scss/partials/_media-queries.scss */
 .oldie nav a {
   margin: 0 0.7%;
 }
@@ -606,7 +610,7 @@ nav ul li {
   /* ====================
       WIDE: CSS3 Effects
      ==================== */
-  /* line 421, ../scss/partials/_media-queries.scss */
+  /* line 426, ../scss/partials/_media-queries.scss */
   .header-container,
   .main aside {
     -webkit-box-shadow: 0 5px 10px #aaa;
@@ -617,12 +621,12 @@ nav ul li {
   /* ============
       WIDE: Menu
      ============ */
-  /* line 432, ../scss/partials/_media-queries.scss */
+  /* line 437, ../scss/partials/_media-queries.scss */
   .title {
     float: left;
   }
 
-  /* line 436, ../scss/partials/_media-queries.scss */
+  /* line 441, ../scss/partials/_media-queries.scss */
   nav {
     float: right;
     width: 38%;
@@ -631,12 +635,12 @@ nav ul li {
   /* ============
       WIDE: Main
      ============ */
-  /* line 446, ../scss/partials/_media-queries.scss */
+  /* line 451, ../scss/partials/_media-queries.scss */
   .main article {
     float: left;
     width: 57%;
   }
-  /* line 451, ../scss/partials/_media-queries.scss */
+  /* line 456, ../scss/partials/_media-queries.scss */
   .main aside {
     float: right;
     width: 28%;
@@ -646,7 +650,7 @@ nav ul li {
   /* ===============
       Maximal Width
      =============== */
-  /* line 464, ../scss/partials/_media-queries.scss */
+  /* line 469, ../scss/partials/_media-queries.scss */
   .wrapper {
     width: 1026px;
     /* 1140px - 10% for margins */
@@ -657,7 +661,7 @@ nav ul li {
    Print styles
    ========================================================================== */
 @media print {
-  /* line 475, ../scss/partials/_media-queries.scss */
+  /* line 480, ../scss/partials/_media-queries.scss */
   * {
     background: transparent !important;
     color: #000 !important;
@@ -666,18 +670,18 @@ nav ul li {
     text-shadow: none !important;
   }
 
-  /* line 482, ../scss/partials/_media-queries.scss */
+  /* line 487, ../scss/partials/_media-queries.scss */
   a,
   a:visited {
     text-decoration: underline;
   }
 
-  /* line 487, ../scss/partials/_media-queries.scss */
+  /* line 492, ../scss/partials/_media-queries.scss */
   a[href]:after {
     content: " (" attr(href) ")";
   }
 
-  /* line 491, ../scss/partials/_media-queries.scss */
+  /* line 496, ../scss/partials/_media-queries.scss */
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
@@ -685,33 +689,33 @@ nav ul li {
   /*
    * Don't show links for images, or javascript/internal links
    */
-  /* line 499, ../scss/partials/_media-queries.scss */
+  /* line 504, ../scss/partials/_media-queries.scss */
   .ir a:after,
   a[href^="javascript:"]:after,
   a[href^="#"]:after {
     content: "";
   }
 
-  /* line 505, ../scss/partials/_media-queries.scss */
+  /* line 510, ../scss/partials/_media-queries.scss */
   pre,
   blockquote {
     border: 1px solid #999;
     page-break-inside: avoid;
   }
 
-  /* line 511, ../scss/partials/_media-queries.scss */
+  /* line 516, ../scss/partials/_media-queries.scss */
   thead {
     display: table-header-group;
     /* h5bp.com/t */
   }
 
-  /* line 515, ../scss/partials/_media-queries.scss */
+  /* line 520, ../scss/partials/_media-queries.scss */
   tr,
   img {
     page-break-inside: avoid;
   }
 
-  /* line 520, ../scss/partials/_media-queries.scss */
+  /* line 525, ../scss/partials/_media-queries.scss */
   img {
     max-width: 100% !important;
   }
@@ -719,7 +723,7 @@ nav ul li {
   @page {
     margin: 0.5cm;
   }
-  /* line 528, ../scss/partials/_media-queries.scss */
+  /* line 533, ../scss/partials/_media-queries.scss */
   p,
   h2,
   h3 {
@@ -727,7 +731,7 @@ nav ul li {
     widows: 3;
   }
 
-  /* line 535, ../scss/partials/_media-queries.scss */
+  /* line 540, ../scss/partials/_media-queries.scss */
   h2,
   h3 {
     page-break-after: avoid;
