--- a/SCSS/Run Forest Run/app/scss/partials/_media-queries.scss
+++ b/SCSS/Run Forest Run/app/scss/partials/_media-queries.scss
@@ -269,6 +269,10 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         margin-top: 1%;
+
+        .single__agent  {
+            margin-right: 10%;
+        }
     }
 
   .footer__block  {
@@ -334,41 +338,42 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         margin-top: 1%;
+
     }
 
-  .footer__block  {
-    margin-top: 10%;
-    width: 100%;
-    height: 88px;
-    left: 0px;
-    top: 1054px;
-    
-    background: #000000;
-    display: flex;
-
-      p  {
-        margin-left: 10%;
-        margin-top: 5%;
-        width: 50%;
-        top: 5%;
+    .footer__block  {
+        margin-top: 10%;
+        width: 100%;
+        height: 88px;
+        left: 0px;
+        top: 1054px;
         
-        font-family: Arial;
-        font-size: 70%;
-        line-height: normal;
-        color: #FFFFFF;   
-
+        background: #000000;
+        display: flex;
+    
+          p  {
+            margin-left: 5%;
+            margin-top: 3%;
+            width: 50%;
+            top: 5%;
+            
+            font-family: Arial;
+            font-size: 70%;
+            line-height: normal;
+            color: #FFFFFF;   
+    
+          }
+    
+          h5  {
+            margin-left: 30%;
+            margin-top: 3%;
+            font-family: Arial;
+            font-size: 70%;
+            line-height: normal;
+            text-decoration-line: underline;
+            color: #FFFFFF;
+          }
       }
-
-      h5  {
-        margin-left: 10%;
-        margin-top: 5%;
-        font-family: Arial;
-        font-size: 70%x;
-        line-height: normal;
-        text-decoration-line: underline;
-        color: #FFFFFF;
-      }
-  }
 
   }
 
